--- a/frontCourtConnect/package.json
+++ b/frontCourtConnect/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~53.0.11",
@@ -17,11 +18,11 @@
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "react-native-maps": "1.20.1"
+    "expo-location": "~18.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
