--- a/courtconnectApi/config/services.yaml
+++ b/courtconnectApi/config/services.yaml
@@ -6,6 +6,10 @@
 parameters:
 
 services:
+    App\Security\CustomAuthenticationSuccessHandler:
+        arguments:
+            $jwtManager: '@lexik_jwt_authentication.jwt_manager'
+            $em: '@doctrine.orm.entity_manager'
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
