--- a/courtconnectApi/config/packages/lexik_jwt_authentication.yaml
+++ b/courtconnectApi/config/packages/lexik_jwt_authentication.yaml
@@ -3,3 +3,5 @@ lexik_jwt_authentication:
     public_key: '%env(resolve:JWT_PUBLIC_KEY)%'
     pass_phrase: '%env(JWT_PASSPHRASE)%'
     user_id_claim: username
+    token_ttl: 5
+
